Added shutdown hooks for Fluentd loggers. Logger backends are now reused if they share a name.